# Linera-CrossyChain

./: .env.example  .gitignore  .replit  README.md  package-lock.json  package.json  replit.md
attached_assets/: Pasted-Product-Requirements-Goals-PRD-Goal-Turn-your-existing-single-player-Crossy-style-game-int-1761377893853_1761377893855.txt
backend/: Cargo.toml  README.md
backend/src/: contract.rs  lib.rs  service.rs  state.rs
client/src/: App.tsx
client/src/components/: ConnectionStatus.tsx  CrossyGame.tsx  GameUI.tsx  Leaderboard.tsx  ReplayViewer.tsx  WalletConnect.tsx
client/src/lib/: GameInputRecorder.ts  SeededRandom.ts  lineraClient.ts
scripts/: deploy.sh  start-local.sh
