[package]
name = "crossy-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0"
async-trait = "0.1"
linera-sdk = "0.12"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[target.wasm32-unknown-unknown]
